[package]
name = "roguewasm"
version = "0.1.0"
edition = "2021"
authors = ["Nate Cornell <nathandcornell@gmail.com"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.159"
serde_derive = "1.0.159"
serde-wasm-bindgen = "0.4"

[dependencies.wasm-bindgen]
version = "^0.2" 
features = ["serde-serialize"]
